# experiment

./: .mtn-ignore  Makefile.am  addressing.c  configure.ac  doxygen.cfg  experiment.dxgen  output.c  perfectclamp.c  pulsegen.c  release-expand.config  tests.config  vclamp.c
experiment/: addressing.h  output.h  perfectclamp.h  pulsegen.h  service.h  vclamp.h
glue/: Makefile.am  configure.ac
glue/swig/perl/: Experiment.pm  Makefile.am  experiment.i  experiment_test.pm
glue/swig/python/: Makefile.am  experiment.i  live_output.i  output.i  perfectclamp.i  pulsegen.i  setup.py  uninstall.py
glue/swig/python/experiment/: Makefile.am  __cbi__.py  __init__.py  output.py  perfectclamp.i  perfectclamp.py  pulsegen.py
glue/swig/python/experiment/pulsegen/: Makefile.am  __init__.py  pulsegen.i
glue/swig/python/neurospaces/experiment/: __cbi__.py  output.py  output_base.py  perfectclamp.py
glue/swig/python/tests/: experiment_test.py
glue/swig/python_old/: Makefile.am  SwiggableExperiment.py  swiggable_experiment_wrap.c
install/: release.yml
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: Welcome.rtf
install/rpm/: experiment.spec
integrators/: Makefile.am
integrators/experiment/neurospaces/: kinetics.c  pulsegen.c  pulsegen.h
tests/: Makefile.am  introduction.html  tests.config
tests/python/: import_tests.py  perfectclamp_1.py  perfectclamp_2.py  perfectclamp_3.py  perfectclamp_import.py  pulsegen_1.py  pulsegen_2.py  pulsegen_3.py  pulsegen_4.py  pulsegen_5.py  pulsegen_6.py  pulsegen_extgate.py  pulsegen_exttrig.py  pulsegen_freerun.py  pulsegen_freerun_1.py  pulsegen_freerun_file.py  pulsegen_import.py  test_library.py
tests/specifications/: python_perfectclamp.t  python_pulsegen.t  version.t
tests/specifications/python/: pyperfectclamp.t  pypulsegen.t
tests/specifications/strings/: pulsegen-extgate.txt  pulsegen-freerun.txt
